Fix paths inseide the react

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Frontend practice</title>
+        <title>APIs</title>
         <!-- Properties and constants-->
-        <script type="text/javascript" src="/static/js/properties.js"></script>
+        <script type="text/javascript" src="static/js/properties.js"></script>
         <!-- Styles    -->
-        <link rel="stylesheet" type="text/css" href="/static/css/variables.css">
-        <link rel="stylesheet" type="text/css" href="/static/css/normalize.css">
-        <link rel="stylesheet" type="text/css" href="/static/css/utils.css">
+        <link rel="stylesheet" type="text/css" href="static/css/variables.css">
+        <link rel="stylesheet" type="text/css" href="static/css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="static/css/utils.css">
     </head>
     <body>
         <div class="app__wrapper" id="app"></div>
